# Y4_Assignment1

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
image_reproduction/: Figure3.csv  figures.sh
results/Speed_Testing/: Report.docx  Timing_Plots.ipynb  Timings.csv  Timings.xlsx  cython_omp_results.csv  cython_results.csv  mpi_cython_results.csv  mpi_numba_results.csv  mpi_results.csv  numba_parallel_results.csv  numba_results.csv  numpy_results.csv  numpy_sequential_results.csv  numpy_vec_results.csv
results/cProfiles/: Core_cProfile
results/image_reproduction/: Figure2.csv  Figures.ipynb  pdf_figures.ipynb
src/lebo/: Numba.py  Numba_1D.py  Numba_1D_Seq.py  Numpy.py  core.py  core_1D.py
src/lebo/Cython/: Cython.c  Cython.pyx  Cython_omp.c  Cython_omp.pyx  run_Cython.py  run_Cython_omp.py  setup_Cython.py  setup_Cython_omp.py
src/lebo/MPI/: MPI.py  MPI_Cython.c  MPI_Cython.pyx  MPI_Numba.py  run_MPI.py  run_MPI_Cython.py  run_MPI_Numba.py  setup_MPI_Cython.py
src/lebo/Numba/: Numba.py  Numba_Parallel.py
src/lebo/Numpy/: Numpy.py  Numpy_Sequential.py  Numpy_Vectorised.py
tests/: conftest.py  test_Cython.py  test_MPI.py  test_Numba.py  test_Numpy.py  test_baseline.py
